tests/rosetta/out/C/csv-data-manipulation.error
cc: exit status 1
/tmp/csv-data-manipulation.c: In function ‘parseIntStr’:
/tmp/csv-data-manipulation.c:171:11: error: request for member ‘len’ in something not a structure or union
  171 |   if ((str.len > 0 && tmp3 == "-")) {
      |           ^
/tmp/csv-data-manipulation.c:188:18: error: request for member ‘len’ in something not a structure or union
  188 |   while ((i < str.len)) {
      |                  ^
/tmp/csv-data-manipulation.c: In function ‘_mochi_main’:
/tmp/csv-data-manipulation.c:216:27: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  216 |   list_int rows_data[] = {tmp6, tmp7, tmp8, tmp9};
      |                           ^~~~
/tmp/csv-data-manipulation.c:216:33: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  216 |   list_int rows_data[] = {tmp6, tmp7, tmp8, tmp9};
      |                                 ^~~~
/tmp/csv-data-manipulation.c:216:39: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  216 |   list_int rows_data[] = {tmp6, tmp7, tmp8, tmp9};
      |                                       ^~~~
/tmp/csv-data-manipulation.c:216:45: error: incompatible types when initializing type ‘int *’ using type ‘list_string’
  216 |   list_int rows_data[] = {tmp6, tmp7, tmp8, tmp9};
      |                                             ^~~~
/tmp/csv-data-manipulation.c:220:51: error: incompatible type for argument 1 of ‘concat_list_string’
  220 |   list_string tmp11 = concat_list_string(rows.data[0], tmp10);
      |                                          ~~~~~~~~~^~~
      |                                                   |
      |                                                   list_int
/tmp/csv-data-manipulation.c:111:51: note: expected ‘list_string’ but argument is of type ‘list_int’
  111 | static list_string concat_list_string(list_string a, list_string b) {
      |                                       ~~~~~~~~~~~~^
/tmp/csv-data-manipulation.c:221:18: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  221 |   rows.data[0] = 0;
      |                  ^
/tmp/csv-data-manipulation.c:224:37: error: subscripted value is neither array nor pointer nor vector
  224 |     for (int tmp12 = 0; rows.data[i][tmp12] != '\0'; tmp12++) {
      |                                     ^
/tmp/csv-data-manipulation.c:226:26: error: subscripted value is neither array nor pointer nor vector
  226 |       s[0] = rows.data[i][tmp12];
      |                          ^
/tmp/csv-data-manipulation.c:232:20: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  232 |     rows.data[i] = 0;
      |                    ^
/tmp/csv-data-manipulation.c:236:15: error: incompatible types when initializing type ‘char *’ using type ‘list_int’
  236 |     char *r = rows.data[tmp15];
      |               ^~~~
/tmp/csv-data-manipulation.c:237:25: error: incompatible type for argument 1 of ‘join’
  237 |     printf("%d\n", join(r, ","));
      |                         ^
      |                         |
      |                         char *
/tmp/csv-data-manipulation.c:152:24: note: expected ‘list_string’ but argument is of type ‘char *’
  152 | char *join(list_string xs, char *sep) {
      |            ~~~~~~~~~~~~^~
